# wrystr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GITHUB_DESCRIPTION.md  PKGBUILD  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
scripts/: capture-manual.sh  capture-screenshots.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/relay/: db.rs
src/components/article/: ArticleCard.tsx  ArticleEditor.tsx  ArticleFeed.tsx  ArticleView.tsx
src/components/bookmark/: BookmarkView.tsx
src/components/dm/: DMView.tsx
src/components/feed/: ComposeBox.tsx  Feed.tsx  FountainCard.tsx  InlineReplyBox.tsx  MediaCards.tsx  NoteActions.tsx  NoteCard.tsx  NoteContent.tsx  QuoteModal.tsx  TextSegments.tsx
src/components/follows/: FollowsView.tsx
src/components/notifications/: NotificationsView.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/podcast/: EpisodeList.tsx  PodcastCard.tsx  PodcastsView.tsx  (+2 more)
src/hooks/: useInView.ts  useNip05Verified.ts  usePollVotes.ts  useProfile.ts  useReactions.ts  useReplyCount.ts  useReputation.ts  useZapCount.ts
src/lib/: db.ts  feedDiagnostics.ts  notificationPoller.ts  parsing.ts  tauri-dev-mock.ts  themes.ts  threadTree.ts  upload.ts  utils.ts
src/stores/: feed.ts  lightning.ts  notifications.ts  podcast.ts  ui.test.ts  ui.ts  user.ts  wot.ts
src/types/: nostr.ts  podcast.ts
test/: gen-accounts.mjs
(+36 files in other folders)
