[package]
name = "vega"
version = "0.12.1"
description = "Cross-platform Nostr desktop client with Lightning integration"
authors = ["hoornet"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vega_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-http = "2.5.7"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.24"
secp256k1 = { version = "0.30", features = ["global-context"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

